Update README.md
Adding in VM arguments section