@@ -1,7 +1,11 @@
-## Put Mulesoft related information here.
+###### Put Mulesoft related information here.
 
-# Using the mule-development-template
+# Using the mule-development-template:
 Unless updating the template do not pull code from this repository. When creating a new repository here use the mule-development-template as the template during creation.
+
+## VM Arguments:
+VM Aruguments come with the mule template but sometimes don't, in case they are missing when you go to run configurations under arguments tab VM arguments here is what is recommended from the MuleSoft consultant
+- -M-XX:-UseBiasedLocking -M-Dfile.encoding=UTF-8 -M-XX:+UseG1GC -M-XX:+UseStringDeduplication -Dmule.env=local -Dmule.encryption.key=GVSUMule -Danypoint.platform.gatekeeper=disabled -Dmule.verbose.exceptions=true
 
 # CICD Pipeline GitHub environment secrets:
 Test and Prod values will differ:
